Added a few comments and performed some tweaking

--- a/slides.Rmd
+++ b/slides.Rmd
@@ -33,7 +33,7 @@ xaringanExtra::use_panelset()
 class: middle
 name: cc-by
 
-### Get the slides at 
+### Get the slides at https://bit.ly/2021_ib2_scp
 
 These slides are available under a **creative common
 [CC-BY license](http://creativecommons.org/licenses/by/4.0/)**. You are
@@ -41,9 +41,6 @@ free to share (copy and redistribute the material in any medium or
 format) and adapt (remix, transform, and build upon the material) for
 any purpose, even commercially
 <img height="20px" alt="CC-BY" src="https://raw.githubusercontent.com/UCLouvain-CBIO/scp-teaching/main/img/cc1.jpg" />.
-
-???
-
 
 ---
 
@@ -75,9 +72,7 @@ knitr::include_graphics("./figs/bulk_issue2.svg")
 ```
 
 ]
-
 ]
-
 .panel[.panel-name[Example]
 
 #### scRNA-Seq on murine embryonic liver
@@ -108,6 +103,32 @@ Transcriptome Level.” Cell Research 30 (12): 1109–26.
 ]
 ]
 
+???
+
+### Concept
+
+Single-cell proteomics is part of the single-cell technologies that are
+incredibly powerful when it comes to studying cellular heterogeneity.
+
+The great advantage of single-cell on bulk assays is that they are able
+to discover unknown sub-populations, even in well studied tissues. 
+Furthermore, single-cell assays capture continuous profiles typical of
+differentiation processes. 
+
+Let me show you an example.
+
+### Example
+
+In this study by Wang et al., the authors applied scRNA-Seq on 
+embryonic liver. They were able for instance to identify a new 
+sub-population of hepatoblasts expressing ID3 that was never described
+before. In the same study, they also could reconstruct the hematopoietic
+lineage from progenitors that differentiate into neutrophils, 
+lymphocytes, dendritic cells,...
+
+But this presentation is about single-cell proteomics, not scRNA-Seq.
+So you may ask yourself: why should we bother with proteins?
+
 ---
 
 class: top
@@ -125,13 +146,10 @@ knitr::include_graphics("./figs/rna_vs_protein_cartoon.svg")
 ]
 .right-column[
 
-scRNA-Seq is widely used, BUT
-
 *RNA &#8776; intention*: RNA is a precursor and "only" provides a proxy
 for cell function and identity
 
-*Protein &#8776; action*: protein content provides cellular function
-and identity
+*Protein &#8776; function*: proteins bear the cellular function and identity
 
 ]
 ]
@@ -179,7 +197,12 @@ Estimate protein abundance **AND** variance
 
 ### Concept
 
-...
+Well, let us keep this in mind: RNA represent the intention of a cell.
+A cell may or may not commit to it. It is a precursor that is "only"
+used as a proxy to infer protein abundance. Protein allows for function.
+If the cell would want to rub its face, it would probably build a 
+protein for it! Hence the protein content will determine the cell's 
+identity. 
 
 But can't we simply say that RNA is equal to protein? No we cannot!
 
@@ -281,7 +304,7 @@ knitr::include_graphics("figs/imputation_issue.svg")
 
 #### Biological missingness
 
-```{r echo=FALSE, out.width='75%', fig.align = 'center'}
+```{r echo=FALSE, out.width='70%', fig.align = 'center'}
 knitr::include_graphics("figs/biological_missingness.svg")
 ```
 
@@ -324,10 +347,13 @@ knitr::include_graphics("figs/Python.png")
 ]
 .right-column[
 
-- `QFeatures` and `scp`: manipulate and visualize single-cell 
-  proteomics data
-- `scpdata`: collection of published data ready to be analyzed
-- SCP.replication: website with replication of published analyses
+- [`QFeatures`](https://bioconductor.org/packages/release/bioc/html/QFeatures.html) and
+  [`scp`](https://bioconductor.org/packages/release/bioc/html/scp.html): 
+  manipulate and visualize single-cell proteomics data
+- [`scpdata`](https://bioconductor.org/packages/release/data/experiment/html/scpdata.html):
+  collection of published data ready to be analyzed
+- [SCP.replication](https://uclouvain-cbio.github.io/SCP.replication/index.html):
+  website with replication of published analyses
 
 Vanderaa and Gatto. 2021. “Replication of Single-Cell Proteomics Data
 Reveals Important Computational Challenges.” Expert Review of 
@@ -414,15 +440,15 @@ class: top
 # Thank you for your attention
 
 
-### Link to the slides
+**Link to the slides**: https://bit.ly/2021_ib2_scp
 
-### Funding
+<br>
 
 ```{r echo=FALSE, out.width='40%', fig.align = 'left'}
 knitr::include_graphics("figs/funding.svg")
 ```
 
-### Get in touch
+<br>
 
 ```{r echo=FALSE, out.width='100%', fig.align = 'center'}
 knitr::include_graphics("figs/get_in_touch.svg")
